Validating HTML index file

--- a/index.html
+++ b/index.html
@@ -4,24 +4,27 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>First page</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css"
+    />
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link
-    href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap"
-    rel="stylesheet"
-  />
-  <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css"
-  />
-  <link rel="stylesheet" href="css/styles.css" />
+
   <body>
     <header>
       <nav class="navbar collapsible">
-        <a class="nav__brand" href="/"><img src="Images/logo.svg" alt="Logo of the webpage" /></a>
+        <a class="nav__brand" href="/"
+          ><img src="Images/logo.svg" alt="Logo of the webpage"
+        /></a>
         <svg class="icon icon--white nav__toggler">
-          <use xlink:href="Images/sprite.svg#menu"></use>
+          <use xlink:href="Images/sprite.svg#menu" />
         </svg>
         <ul class="list nav__list collapsible__content">
           <li class="nav__item"><a href="#">Hosting</a></li>
@@ -55,82 +58,83 @@
             <use
               xlink:href="Images/sprite.svg#search
               "
-            ></use></svg
-          >Search
+            />
+          </svg>
+          Search
         </button>
       </div>
       <ul class="list block--domain__prices">
         <li><span class="badge badge--secondary">.com $9</span></li>
-        <li>.sg $10</span></li>
-        <li>.info $14</span></li>
-        <li>.net $10</span></li>
-        <li>.xyz $10</span></li>
-        <li>.space $11</span></li>
+        <li>.sg $10</li>
+        <li>.info $14</li>
+        <li>.net $10</li>
+        <li>.xyz $10</li>
+        <li>.space $11</li>
       </ul>
     </section>
     <section class="block block--plans container">
       <div class="grid grid--1x3">
-      <div class="plan">
-        <div class="card card-secondary">
-          <header class="card__header">
-            <h3 class="plan__name">Entry</h3>
-            <span class="plan__price">$14</span>
-            <span class="plan__billing-cycle">/month</span>
-            <span class="badge badge--primary badge--small">10%off</span>
-            <span class="plan__description">East start on the cloud</span>
-          </header>
-          <div class="card__body">
-            <ul class="list--tick">
-              <li class="list__item">Unlimited Websites</li>
-              <li class="list__item">100GB of storage</li>
-              <li class="list__item">Unrestricted bandwidth</li>
-              <li class="list__item">3GB Ram</li>
-            </ul>
-            <button class="btn btn--outline btn--block">Buy now</button>
+        <div class="plan">
+          <div class="card card-secondary">
+            <header class="card__header">
+              <h3 class="plan__name">Entry</h3>
+              <span class="plan__price">$14</span>
+              <span class="plan__billing-cycle">/month</span>
+              <span class="badge badge--primary badge--small">10%off</span>
+              <span class="plan__description">East start on the cloud</span>
+            </header>
+            <div class="card__body">
+              <ul class="list--tick">
+                <li class="list__item">Unlimited Websites</li>
+                <li class="list__item">100GB of storage</li>
+                <li class="list__item">Unrestricted bandwidth</li>
+                <li class="list__item">3GB Ram</li>
+              </ul>
+              <button class="btn btn--outline btn--block">Buy now</button>
+            </div>
+          </div>
+        </div>
+        <div class="plan plan--popular">
+          <div class="card card-primary">
+            <header class="card__header">
+              <h3 class="plan__name">Buisness level</h3>
+              <span class="plan__price">$39</span>
+              <span class="plan__billing-cycle">/month</span>
+              <span class="badge badge--secondary badge--small">20%off</span>
+              <span class="plan__description">East start on the cloud</span>
+            </header>
+            <div class="card__body">
+              <ul class="list--tick">
+                <li class="list__item">Unlimited Websites</li>
+                <li class="list__item">300GB of storage</li>
+                <li class="list__item">Unrestricted bandwidth</li>
+                <li class="list__item">5 GB Ram</li>
+              </ul>
+              <button class="btn btn--outline btn--block">Buy now</button>
+            </div>
+          </div>
+        </div>
+        <div class="plan">
+          <div class="card card-secondary">
+            <header class="card__header">
+              <h3 class="plan__name">Buisness plus</h3>
+              <span class="plan__price">$59</span>
+              <span class="plan__billing-cycle">/month</span>
+              <span class="badge badge--primary badge--small">15%off</span>
+              <span class="plan__description">Optimal cloud experience</span>
+            </header>
+            <div class="card__body">
+              <ul class="list--tick">
+                <li class="list__item">Everything from Buisness</li>
+                <li class="list__item">Extra 1TB of storage</li>
+                <li class="list__item">Lifetime Free access</li>
+                <li class="list__item">2 CPU cores</li>
+              </ul>
+              <button class="btn btn--outline btn--block">Buy now</button>
+            </div>
           </div>
         </div>
       </div>
-      <div class="plan plan--popular">
-        <div class="card card-primary">
-          <header class="card__header">
-            <h3 class="plan__name">Buisness level</h3>
-            <span class="plan__price">$39</span>
-            <span class="plan__billing-cycle">/month</span>
-            <span class="badge badge--secondary badge--small">20%off</span>
-            <span class="plan__description">East start on the cloud</span>
-          </header>
-          <div class="card__body">
-            <ul class="list--tick">
-              <li class="list__item">Unlimited Websites</li>
-              <li class="list__item">300GB of storage</li>
-              <li class="list__item">Unrestricted bandwidth</li>
-              <li class="list__item">5 GB Ram</li>
-            </ul>
-            <button class="btn btn--outline btn--block">Buy now</button>
-          </div>
-        </div>
-      </div>
-      <div class="plan">
-        <div class="card card-secondary">
-          <header class="card__header">
-            <h3 class="plan__name">Buisness plus</h3>
-            <span class="plan__price">$59</span>
-            <span class="plan__billing-cycle">/month</span>
-            <span class="badge badge--primary badge--small">15%off</span>
-            <span class="plan__description">Optimal cloud experience</span>
-          </header>
-          <div class="card__body">
-            <ul class="list--tick">
-              <li class="list__item">Everything from Buisness</li>
-              <li class="list__item">Extra 1TB of storage</li>
-              <li class="list__item">Lifetime Free access</li>
-              <li class="list__item">2 CPU cores</li>
-            </ul>
-            <button class="btn btn--outline btn--block">Buy now</button>
-          </div>
-        </div>
-      </div>
-    </div>
     </section>
     <section class="block container">
       <header class="block__header">
@@ -144,7 +148,7 @@
         <div class="feature__content">
           <span class="icon-container">
             <svg class="icon icon--primary">
-              <use xlink:href="Images/sprite.svg#easy"></use>
+              <use xlink:href="Images/sprite.svg#easy" />
             </svg>
           </span>
           <h3 class="feature__heading">Super Easy to Use</h3>
@@ -154,13 +158,14 @@
             quisquam necessitatibus eum eaque corporis quia? Possimus nesciun
           </p>
           <a href="#" class="link-arrow">Learn More</a>
-        </div>        <img src="Images/easy.jpg" alt="" class="hero__img" />
+        </div>
+        <img src="Images/easy.jpg" alt="" class="hero__img" />
       </article>
       <article class="grid grid--1x2 feature">
         <div class="feature__content">
           <span class="icon-container">
             <svg class="icon icon--primary">
-              <use xlink:href="Images/sprite.svg#computer"></use>
+              <use xlink:href="Images/sprite.svg#computer" />
             </svg>
           </span>
           <h3 class="feature__heading">Simply Fast Websites</h3>
@@ -170,13 +175,14 @@
             quisquam necessitatibus eum eaque corporis quia? Possimus nesciun
           </p>
           <a href="#" class="link-arrow">Learn More</a>
-        </div>        <img src="Images/fast.jpg" alt="" class="hero__img" />
+        </div>
+        <img src="Images/fast.jpg" alt="" class="hero__img" />
       </article>
       <article class="grid grid--1x2 feature">
         <div class="feature__content">
           <span class="icon-container">
             <svg class="icon icon--primary">
-              <use xlink:href="Images/sprite.svg#wordpress"></use>
+              <use xlink:href="Images/sprite.svg#wordpress" />
             </svg>
           </span>
           <h3 class="feature__heading">Wordpress Made easy</h3>
@@ -184,8 +190,10 @@
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat
             nulla earum vero, porro iusto, tempora reprehenderit voluptatem,
             quisquam necessitatibus eum eaque corporis quia? Possimus nesciun
-          </p> <a href="#" class="link-arrow">Learn More</a>
-        </div><img src="Images/wordpress.jpg" alt="" class="hero__img" />
+          </p>
+          <a href="#" class="link-arrow">Learn More</a>
+        </div>
+        <img src="Images/wordpress.jpg" alt="" class="hero__img" />
       </article>
     </section>
     <section class="block block--dark block--skewed-left block-showcase">
@@ -193,20 +201,24 @@
         <h2>User Friendly Interface</h2>
       </div>
       <div class="container grid grid--1x2">
-        <img class="block-showcase__image" src="Images/ipad.png" />
+        <img
+          class="block-showcase__image"
+          src="Images/ipad.png"
+          alt="support image for depicting user friendlt interface"
+        />
         <ul class="list">
           <li>
             <div class="media">
               <div class="media__image">
                 <svg class="icon icon--primary">
-                  <use xlink:href="images/sprite.svg#snap"></use>
+                  <use xlink:href="images/sprite.svg#snap" />
                 </svg>
               </div>
               <div class="media__body">
                 <h3 class="media__title">Easy Start & Managed Updates</h3>
                 <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam
-                  quisquam, ex nostrum vero
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Veniam quisquam, ex nostrum vero
                 </p>
               </div>
             </div>
@@ -215,14 +227,14 @@
             <div class="media">
               <div class="media__image">
                 <svg class="icon icon--primary">
-                  <use xlink:href="images/sprite.svg#growth"></use>
+                  <use xlink:href="images/sprite.svg#growth" />
                 </svg>
               </div>
               <div class="media__body">
                 <h3 class="media__title">Staging ,Git and WP-CLI</h3>
                 <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam
-                  quisquam,
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Veniam quisquam,
                 </p>
               </div>
             </div>
@@ -231,14 +243,14 @@
             <div class="media">
               <div class="media__image">
                 <svg class="icon icon--primary">
-                  <use xlink:href="images/sprite.svg#wordpress"></use>
+                  <use xlink:href="images/sprite.svg#wordpress" />
                 </svg>
               </div>
               <div class="media__body">
                 <h3 class="media__title">Dynamic Caching and more</h3>
                 <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam
-                  quisquam, ex nostrum v
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Veniam quisquam, ex nostrum v
                 </p>
               </div>
             </div>
@@ -258,22 +270,23 @@
               <img src="Images/testimonial.jpg" alt="A smiling customer" />
               <span class="icon-container icon-container--accent">
                 <svg class="icon icon--white">
-                  <use xlink:href="Images/sprite.svg#quotes"></use>
+                  <use xlink:href="Images/sprite.svg#quotes" />
                 </svg>
               </span>
             </div>
             <blockquote class="quote">
               <p class="quote__text">
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Autem, error!
-                At ab corrupti magnam, dicta eos et veniam eum earum! Lorem ipsum dolor
-                sit amet consectetur adipisicing elit. Deleniti quaerat sed excepturi
-                placeat veniam magni minima quis odio eaque! Soluta?
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Autem,
+                error! At ab corrupti magnam, dicta eos et veniam eum earum!
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Deleniti quaerat sed excepturi placeat veniam magni minima quis
+                odio eaque! Soluta?
               </p>
               <footer>
                 <div class="media">
                   <div class="media__image">
                     <svg class="icon icon--primary quote__line">
-                      <use xlink:href="images/sprite.svg#line"></use>
+                      <use xlink:href="Images/sprite.svg#line" />
                     </svg>
                   </div>
                   <div class="media__body">
@@ -294,7 +307,7 @@
             <h2>Ready to get started?</h2>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit
-              reprehenderit aliquam, est commodi harum 
+              reprehenderit aliquam, est commodi harum
             </p>
           </div>
           <button class="btn btn--secondary">Get started</button>
@@ -304,12 +317,12 @@
     <footer class="block block--dark footer">
       <div class="container grid">
         <section class="collapsible footer__section">
-          <header class="collapsible__header">
+          <div class="collapsible__header">
             <h2 class="collapsible__heading footer__heading">Products</h2>
             <svg class="icon icon--white collapsible__chevron">
-              <use xlink:href="Images/sprite.svg#chevron"></use>
+              <use xlink:href="Images/sprite.svg#chevron" />
             </svg>
-          </header>
+          </div>
           <div class="collapsible__content">
             <ul class="list">
               <li><a href="#">Website Hosting</a></li>
@@ -319,12 +332,12 @@
           </div>
         </section>
         <section class="collapsible footer__section">
-          <header class="collapsible__header">
+          <div class="collapsible__header">
             <h2 class="collapsible__heading footer__heading">Company</h2>
             <svg class="icon icon--white collapsible__chevron">
-              <use xlink:href="Images/sprite.svg#chevron"></use>
+              <use xlink:href="Images/sprite.svg#chevron" />
             </svg>
-          </header>
+          </div>
           <div class="collapsible__content">
             <ul class="list">
               <li><a href="#">About</a></li>
@@ -334,12 +347,12 @@
           </div>
         </section>
         <section class="collapsible footer__section">
-          <header class="collapsible__header">
+          <div class="collapsible__header">
             <h2 class="collapsible__heading footer__heading">Support</h2>
             <svg class="icon icon--white collapsible__chevron">
-              <use xlink:href="Images/sprite.svg#chevron"></use>
+              <use xlink:href="Images/sprite.svg#chevron" />
             </svg>
-          </header>
+          </div>
           <div class="collapsible__content">
             <ul class="list">
               <li><a href="#">Contact</a></li>
@@ -349,12 +362,12 @@
           </div>
         </section>
         <section class="collapsible footer__section">
-          <header class="collapsible__header">
+          <div class="collapsible__header">
             <h2 class="collapsible__heading footer__heading">Domains</h2>
             <svg class="icon icon--white collapsible__chevron">
-              <use xlink:href="Images/sprite.svg#chevron"></use>
+              <use xlink:href="Images/sprite.svg#chevron" />
             </svg>
-          </header>
+          </div>
           <div class="collapsible__content">
             <ul class="list">
               <li><a href="#">Domain Checker</a></li>
@@ -363,13 +376,12 @@
             </ul>
           </div>
         </section>
-        <section class="footer__brand">
+        <div class="footer__brand">
           <img src="Images/logo.svg" alt="Logo of the brand" />
           <p class="footer__copyright">Copyright 2023 Mithun</p>
-        </section>
+        </div>
       </div>
     </footer>
-    
+    <script src="js/main.js"></script>
   </body>
-  <script src="js/main.js"></script>
 </html>
