--- a/index.html
+++ b/index.html
@@ -65,11 +65,13 @@
       </div>
       <ul class="list block--domain__prices">
         <li><span class="badge badge--secondary">.com $9</span></li>
-        <li>.sg $10</li>
-        <li>.info $14</li>
-        <li>.net $10</li>
-        <li>.xyz $10</li>
-        <li>.space $11</li>
+        <li><span>sg $10</span></li>
+        <li><span>info $14</span></li>
+        <li><span>net $10</span></li>
+        <li><span>xyz $10</span></li>
+        <li>
+          <span>space $11</span>
+        </li>
       </ul>
     </section>
     <section class="block block--plans container">
@@ -101,7 +103,7 @@
               <span class="plan__price">$39</span>
               <span class="plan__billing-cycle">/month</span>
               <span class="badge badge--secondary badge--small">20%off</span>
-              <span class="plan__description">East start on the cloud</span>
+              <span class="plan__description">For cloud professionals</span>
             </header>
             <div class="card__body">
               <ul class="list--tick">
