Cleanup and logo update

--- a/index.html
+++ b/index.html
@@ -20,8 +20,11 @@
   <body>
     <header>
       <nav class="navbar collapsible">
-        <a class="nav__brand" href="/"
-          ><img src="Images/logo.svg" alt="Logo of the webpage"
+        <a class="nav__brand" href="/index.html"
+          ><img
+            style="height: 6rem; width: 12rem"
+            src="Images/cloud-ease-logo-transparent.png"
+            alt="Logo of the webpage"
         /></a>
         <svg class="icon icon--white nav__toggler">
           <use xlink:href="Images/sprite.svg#menu" />
@@ -379,8 +382,12 @@
           </div>
         </section>
         <div class="footer__brand">
-          <img src="Images/logo.svg" alt="Logo of the brand" />
-          <p class="footer__copyright">Copyright 2023 Mithun</p>
+          <img
+            style="height: 6rem; width: 12rem"
+            src="Images/cloud-ease-logo-transparent.png"
+            alt="Logo of the brand"
+          />
+          <p class="footer__copyright">Copyright 2023 Yogesh</p>
         </div>
       </div>
     </footer>
